# kubemal

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: build-push.yaml
gitops/: app-of-apps.yaml  application.yaml
gitops/apps/: cert-manager.yaml  kubemal.yaml
kubernetes/crd/: anime.yaml  watchrecord.yaml
kubernetes/deploy/: anime.yaml  deployment.yaml  identity.yaml  rbac.yaml  service.yaml  tls.yaml  watchrecord.yaml  webhook.yaml
kubernetes/test/: test-anime.yaml  test-watchrecord.yaml
kubernetes/webhook/: mutating_anime.yaml  validating_watchrecord.yaml
src/: anime_api.rs  controller.rs  crd.rs  main.rs  router.rs  util.rs
src/lib/: anime_api.rs  controller.rs  crd.rs  errors.rs  mod.rs  router.rs  util.rs
