[package]
name = "kubemal"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "3.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
schemars = { version = "1" }
tokio = { version = "1.51.1", features = ["full"] }
serde = "1.0.228"
serde_json = "1.0.149"
