[package]
name = "kubemal"
version = "0.1.0"
edition = "2024"

[dependencies]
rustls = { version = "0.23.38", features = ["aws-lc-rs"] }
kube = { version = "3.1.0", features = ["runtime", "derive", "admission", "rustls-tls"] }
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
schemars = { version = "1" }
tokio = { version = "1.51.1", features = ["full"] }
serde = "1.0.228"
serde_json = "1.0.149"
axum = "0.8.9"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "default-tls"] }
json-patch = "4.1.0"
futures = "0.3.32"
thiserror = "2.0.18"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
tower-http = { version = "0.6.8", features = ["trace"] }

[lib]
path = "src/lib/mod.rs"
